--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -2,7 +2,11 @@
     <div class="jumbo">{{site.heading}} </div>
     <div class="home-sub-text"> <h3>
         Jekyll Garden is a markdown friendly theme lets you publish your Obsidian vault (or a subset of it) as a Jekyll static website. 
-        Check out the <a href="{{'/notes' | relative_url}}"> demo </a>, <a href="{{'/post/features' | relative_url}}"> features </a> and <a href="{{'/post/how-to' | relative_url}}"> how to</a>.
+
+        This is a lore vault for all the Campaign lore submitted to the lore channel on the discord.
+        Contact Moonlighter or an Admin if anything is incorrect.
+
+        You can start exploring the Vault by first Checking out the <a href="{{'/notes' | relative_url}}">Mission Makers</a>.
         </h3> 
 </div> </div>
 
