--- a/_includes/Homepage.html
+++ b/_includes/Homepage.html
@@ -1,12 +1,10 @@
 <div class="home-intro">
     <div class="jumbo">{{site.heading}} </div>
     <div class="home-sub-text"> <h3>
-        Jekyll Garden is a markdown friendly theme lets you publish your Obsidian vault (or a subset of it) as a Jekyll static website. 
-
         This is a lore vault for all the Campaign lore submitted to the lore channel on the discord.
         Contact Moonlighter or an Admin if anything is incorrect.
 
-        You can start exploring the Vault by first Checking out the <a href="{{'/notes' | relative_url}}">Mission Makers</a>.
+        You can start exploring the Vault by first Checking out the <a href="{{'/notes/Mission Makers.md' | relative_url}}">Mission Makers</a>.
         </h3> 
 </div> </div>
 
